change name to Chaal

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "konj",
+  "name": "chaal",
   "version": "1.0.0",
   "description": "AUT's reddit",
   "author": "Arya Hadi <arya.hadi97@gmail.com>",
