--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "konj",
-  "short_name": "konj",
+  "name": "chaal",
+  "short_name": "chaal",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
